WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14154
Spinneret doesn't build against the new Win32 port.
https://bugs.webkit.org/show_bug.cgi?id=14154
Summary
Spinneret doesn't build against the new Win32 port.
Jake
Reported
2007-06-14 18:15:34 PDT
Spinneret fails to build after the new win32 port.
Attachments
Patch to allow spinneret to compile.
(3.13 KB, patch)
2007-06-14 18:17 PDT
,
Jake
timothy
: review-
Details
Formatted Diff
Diff
A fix of the fix (includes changelog)
(4.83 KB, patch)
2007-06-15 07:54 PDT
,
Jake
aroben
: review-
Details
Formatted Diff
Diff
A fix to the fix to the fix..
(4.39 KB, patch)
2007-06-17 22:43 PDT
,
Jake
aroben
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jake
Comment 1
2007-06-14 18:17:44 PDT
Created
attachment 15038
[details]
Patch to allow spinneret to compile. There were just a couple of changes required to get it to build.
Timothy Hatcher
Comment 2
2007-06-15 07:08:27 PDT
Comment on
attachment 15038
[details]
Patch to allow spinneret to compile. This change looks good, but it can't land until you have a ChangeLog entry. The prepare-ChangeLog script will do most of the work, but you will want to edit that and add info about what you changed and the bug title and url.
Jake
Comment 3
2007-06-15 07:54:44 PDT
Created
attachment 15056
[details]
A fix of the fix (includes changelog) Oops! I forgot the changelog :)
Adam Roben (:aroben)
Comment 4
2007-06-17 21:18:33 PDT
Comment on
attachment 15056
[details]
A fix of the fix (includes changelog) - $safariPath = "cmd"; + $safariPath = "echo"; This change looks wrong -- won't it break run-safari? + hr = viewExt->viewWindow(((OLE_HANDLE*) &gViewWindow)); You've got an extra set of parentheses here.
Jake
Comment 5
2007-06-17 22:43:15 PDT
Created
attachment 15095
[details]
A fix to the fix to the fix.. I'll get this right.. eventually!
Adam Roben (:aroben)
Comment 6
2007-06-17 22:44:46 PDT
Comment on
attachment 15095
[details]
A fix to the fix to the fix.. r=me
Mark Rowe (bdash)
Comment 7
2007-06-18 10:10:46 PDT
Jake, can you please be sure to use spaces rather than tabs for indentation. It makes landing the patch easier if I don't have to detabify it first. Landed in
r23566
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug